@@ -7,9 +7,7 @@ VERSION=0313
 svn export vfsroot vfsrootnonsvn
 
 # Windows Version
-cd Win32
-cp CommanderGenius.exe ../CGenius.exe
-cd ..
+cp build/Win32/CGenius.exe ./CGenius.exe
 
 cd vfsrootnonsvn
 zip -r ../${NAME}-v${VERSION}-win32.zip ./
@@ -26,10 +24,8 @@ zip ${NAME}-v${VERSION}-win32.zip ./readme.txt
 rm ./CGenius.exe
 
 # Linux 64-bit Version
-cd Linux64
-cp CommanderGenius ../CGenius
-cp CommanderGenius ../distro/Ubuntu/usr/games
-cd ..
+cp build/Linux64/CGenius ./CGenius
+cp build/Linux64/CGenius ./distro/Ubuntu/usr/games
 
 cd vfsrootnonsvn
 zip -r ../${NAME}-v${VERSION}-linux64.zip ./
@@ -46,9 +42,8 @@ cd ..
 mv distro/CGenius_x64.deb ${NAME}-v${VERSION}-x64.deb
 
 # Linux 32-bit Version
-cd Linux32
-cp CommanderGenius ../CGenius
-cp CommanderGenius ../distro/Ubuntu/usr/games
+cp build/Linux32/CGenius ./CGenius
+cp build/Linux32/CGenius ./distro/Ubuntu/usr/games
 
 cd ..
 cd vfsrootnonsvn
